Updated home section, added links, fixed background color in dark mode, updated favicon and title

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(249, 249, 249);
+  background-color: rgb(66, 66, 66);
 }
 
 code {
@@ -20,6 +20,11 @@ code {
 
 * {
   margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none; /* no underline */
 }
 
 .gold {
@@ -34,6 +39,7 @@ code {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  transition: all 0.2s ease-in-out;
 }
 
 .nav-dark {
@@ -45,6 +51,7 @@ code {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  transition: all 0.2s ease-in-out;
 }
 
 .nav-menu {
@@ -72,17 +79,27 @@ code {
 
 .nav-icon {
   height: 22px;
-  margin: 0px 3px;
+  margin: 0px 5px;
+}
+
+.nav-icon:hover {
+  cursor: pointer;
 }
 
 .container {
   margin: 40px;
 }
 
+.light {
+  background-color: white;
+  padding-bottom: 1000px;
+  transition: all 0.2s ease-in-out;
+}
+
 .dark {
   background-color: var(--dark-backgroundMain);
-  height: 100%;
   padding-bottom: 1000px;
+  transition: all 0.2s ease-in-out;
 }
 
 .section-main {
@@ -95,19 +112,22 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: all 0.2s ease-in-out;
 }
 
 .section-main-dark {
   background-color: var(--dark-background);
   color: white;
+
   margin: auto;
   max-width: 800px;
   margin-top: 40px;
   border-radius: 15px;
-  box-shadow: 0px 0px 5px rgb(255, 255, 255, 0.4);
+  box-shadow: 0px 0px 5px grey;
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: all 0.2s ease-in-out;
 }
 
 .home-title {
@@ -127,14 +147,18 @@ code {
 .home-smalltitle {
   color: #666666;
   margin: 5px 10px;
+  margin-top: 15px;
   font-size: 16px;
   font-weight: 500px;
   text-align: center;
+  padding-bottom: 40px;
 }
 
 .home-smalltitle-dark {
   color: white;
+
   margin: 5px 10px;
+  margin-top: 15px;
   font-size: 16px;
   font-weight: 500px;
   text-align: center;
@@ -147,8 +171,7 @@ code {
 }
 
 .home-sm {
-  position: absolute;
-  margin: 180px 10px;
+  margin: 5px 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -158,7 +181,6 @@ code {
 .home-sm-icon {
   margin: 0px 5px;
   font-size: 28px;
-  transition: all 0.2s ease-in-out;
 }
 
 .home-sm-icon:hover {
@@ -176,4 +198,14 @@ code {
   .nav-title {
     display: none;
   }
+}
+
+.wip-title {
+  margin: 5px;
+  padding-top: 20px;
+}
+
+.wip-p {
+  margin: 5px;
+  padding-bottom: 20px;
 }
